[package]
name = "beamctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive", "env"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread"] }
