[package]
name = "beamctl"
version = "0.1.6-prerelease1"
edition = "2021"
repository = "https://github.com/samply/beamctl"
documentation = "https://github.com/samply/beamctl"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
#opt-level = "z"     # Optimize for size.
lto = "fat"         # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.70.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

[workspace.metadata.release]
publish = false
